--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="card-body">
       	<h2><small class="text-muted text-justify" jhiTranslate="home.actionServiceDemande.description"></small></h2>
-        <button type="button" class="btn btn-lg btn-block btn-outline-primary" jhiTranslate="home.actionServiceDemande.button"></button>
+        <button routerLink="account/register-demande" type="button" class="btn btn-lg btn-block btn-outline-primary" jhiTranslate="home.actionServiceDemande.button"></button>
       </div>
     </div>
     
@@ -32,12 +32,41 @@
       </div>
       <div class="card-body">
       	<h2><small class="text-muted text-justify" jhiTranslate="home.actionServiceMission.description"></small></h2>
-      	 <br><br/>
-      	 <br><br/>
+      	<h3><span class="badge badge-warning" jhiTranslate="home.actionServiceMission.descriptionBis">Warning</span></h3>
+      	<br><br/>
         <button type="button" class="btn btn-lg btn-block btn-primary" jhiTranslate="home.actionServiceMission.button"></button>
       </div>
     </div>
   </div>
+  <!-- list de don .. -->
+	<div class="jumbotron">
+		<h1 class="text-center display-4">Liste des cagnottes partenaires</h1>
+		<div class="container">
+		  <div class="bg-light p-5 rounded mt-3">
+		    <h1>Association 2 mars zarzis</h1>
+		    <p class="lead">Salem.tout le monde comme prévu je mets la cagnotte en ligne pour aider notre quartier 2 mars à zarzis
+
+1 aider les plus démunis 2 achat matériel médical et chaise et une grande tente pour les occasions 3 s'occuper de notre quartier route où élagage ou propreté 4 les jeunes qui veulent se marier ont peut leurs donner un coup de pousse 5 la rentrée scolaire + le Ramadan + les cas urgents
+
+Merci à tous le monde d'avance</p>
+		    <a class="btn btn-lg btn-primary" href="https://www.leetchi.com/fr/c/rnjO67jr?fbclid=IwAR04vVTJSLmVSWLu8iB79FRarfgm59PuHTaf2e8dioUer1q1LFyBAIZihhE" role="button" target="_blank">Je participe &raquo;</a>
+		  </div>
+		</div>
+		<div class="container">
+		  <div class="bg-light p-5 rounded mt-3">
+		    <h1>Bottom Navbar example</h1>
+		    <p class="lead">This example is a quick exercise to illustrate how the bottom navbar works.</p>
+		    <a class="btn btn-lg btn-primary"  role="button">View navbar docs &raquo;</a>
+		  </div>
+		</div>
+		<div class="container">
+		  <div class="bg-light p-5 rounded mt-3">
+		    <h1>Bottom Navbar example</h1>
+		    <p class="lead">This example is a quick exercise to illustrate how the bottom navbar works.</p>
+		    <a class="btn btn-lg btn-primary" >View navbar docs &raquo;</a>
+		  </div>
+		</div>
+	</div>
 
   <footer class="pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
