--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -22,19 +22,20 @@
       </div>
       <div class="card-body">
       	<h2><small class="text-muted text-justify" jhiTranslate="home.actionServiceProposition.description"></small></h2>
-        <button type="button" class="btn btn-lg btn-block btn-primary" jhiTranslate="home.actionServiceProposition.button"></button>
+        <button routerLink="account/register-proposition" type="button" class="btn btn-lg btn-block btn-primary" jhiTranslate="home.actionServiceProposition.button"></button>
       </div>
     </div>
     
     <div class="card mb-4 shadow-sm">
       <div class="card-header">
-        <h4 class="my-0 font-weight-normal" jhiTranslate="home.actionServiceMission.title" ></h4>
+        <h4 class="my-0 font-weight-normal" jhiTranslate="home.actionServiceDon.title" ></h4>
       </div>
       <div class="card-body">
-      	<h2><small class="text-muted text-justify" jhiTranslate="home.actionServiceMission.description"></small></h2>
-      	<h3><span class="badge badge-warning" jhiTranslate="home.actionServiceMission.descriptionBis">Warning</span></h3>
+      	<h2><small class="text-muted text-justify" jhiTranslate="home.actionServiceDon.description"></small></h2>
+      	<h3><span class="badge badge-warning" jhiTranslate="home.actionServiceDon.descriptionBis">Warning</span></h3>
       	<br><br/>
-        <button type="button" class="btn btn-lg btn-block btn-primary" jhiTranslate="home.actionServiceMission.button"></button>
+        <a href="https://www.onparticipe.fr/cagnottes/dDZlC23g" target="_blank"><button type="button" class="btn btn-lg btn-block btn-primary" jhiTranslate="home.actionServiceDon.button"
+        		 ></button></a>
       </div>
     </div>
   </div>
